fix: hide page overflow.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     height: 100%;
-    overscroll-behavior: none;
+    overflow: hidden;
 }
 
 body {
